--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "leaflet": "^1.9.4",
     "lucide-react": "^0.564.0",
     "next": "16.1.6",
+    "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-leaflet": "^5.0.0",
     "shadcn": "^3.8.4",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.1",
     "tw-animate-css": "^1.4.0"
   },
